@@ -95,3 +95,17 @@ class OptionConstantsTest(unittest.TestCase):
         curl = pycurl.Curl()
         curl.setopt(curl.TFTP_BLKSIZE, 1024)
         curl.close()
+    
+    # CURLOPT_SOCKS5_GSSAPI_SERVICE was introduced in libcurl-7.19.4
+    @util.min_libcurl(7, 19, 4)
+    def test_socks5_gssapi_service_setopt(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.SOCKS5_GSSAPI_SERVICE, 'helloworld')
+        curl.close()
+    
+    # CURLOPT_SOCKS5_GSSAPI_NEC was introduced in libcurl-7.19.4
+    @util.min_libcurl(7, 19, 4)
+    def test_socks5_gssapi_nec_setopt(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.SOCKS5_GSSAPI_NEC, True)
+        curl.close()
